--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#feed {
+  display: flex;
+  flex-direction: column;
+}
+
+.title-wrapper {
+  padding-left: 3vw;
+  display: flex;
+  height: 15vh;
+  border: 1px solid rgb(182, 226, 226);
+}
+
+.title {
+  display: flex;
+  align-items: center;
+}
+
+.title-desc-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5vw;
+  gap: 10px;
+}
+
+.icon {
+  width: 19vw;
+  height: 10vh;
+  border-radius: 17px 17px 17px 17px;
+  -webkit-border-radius: 17px 17px 17px 17px;
+  -moz-border-radius: 17px 17px 17px 17px;
+}
+
+.media-wrapper {
+  background-color: rgb(232, 255, 255);
+  height: 35vh;
+}
+
+.container-react-scroll {
+  width: 100%;
+  height: 100%;
+  transition: transform 2s;
+}
+
+.video {
+  width: 34vw;
+  height: 30vh;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 13px;
+  border-radius: 26px 26px 30px 29px;
+  -webkit-border-radius: 26px 26px 30px 29px;
+  -moz-border-radius: 26px 26px 30px 29px;
+}
+
+.button {
+  width: 10px;
+  hieght: 10px;
+  padding-bottom: 15px;
 }
